--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
+    android:orientation="vertical"
+    android:theme="@style/MyEmulatorTheme"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <include layout="@layout/toolbar_editor" />
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <TextView
-            android:id="@+id/tvLineNum"
-            android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:background="@color/darkerGray"
-            android:fontFamily="@font/source_code_pro_regular"
-            android:gravity="end"
-            android:padding="6dp"
-            android:text="1"
-            android:textColor="@color/lightGray"
-            android:textSize="18sp" />
-
-        <com.amrdeveloper.codeview.CodeView
-            android:id="@+id/codeView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/darkestGray"
-            android:dropDownWidth="150dp"
-            android:dropDownHorizontalOffset="0dp"
-            android:dropDownSelector="@color/darkGray"
-            android:fontFamily="@font/source_code_pro_regular"
-            android:gravity="top|start"
-            android:padding="6dp"
-            android:textSize="18sp" />
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_line_num"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:background="@color/white_2"
+                android:fontFamily="@font/source_code_pro_regular"
+                android:gravity="end"
+                android:padding="6dp"
+                android:text="1"
+                android:textColor="@color/gray_2"
+                android:textSize="18sp" />
 
-</ScrollView>
+            <View
+                android:layout_width="0.5dp"
+                android:layout_height="match_parent"
+                android:background="@color/gray_0" />
+
+            <com.amrdeveloper.codeview.CodeView
+                android:id="@+id/code_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white_0"
+                android:dropDownWidth="150dp"
+                android:dropDownHorizontalOffset="0dp"
+                android:dropDownSelector="@color/darkGray"
+                android:fontFamily="@font/source_code_pro_regular"
+                android:gravity="top|start"
+                android:padding="6dp"
+                android:textSize="18sp" />
+
+        </LinearLayout>
+    </ScrollView>
+
+</LinearLayout>
