--- a/app/src/main/res/drawable/ic_undo.xml
+++ b/app/src/main/res/drawable/ic_undo.xml
@@ -1,10 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="512dp"
-    android:height="512dp"
-    android:viewportWidth="512"
-    android:viewportHeight="512">
-  <path
-      android:pathData="M76.5,72.9c-1.6,1 -19.3,18.2 -39.2,38.2 -31.5,31.7 -36.2,36.9 -36.8,40.1 -1.6,8.8 -2.1,8.2 36.2,46.9 19.6,19.8 37.1,36.9 39,38 6.9,4.3 16.6,1.9 20.7,-5 2.2,-3.7 2.4,-10.6 0.6,-14.2 -0.7,-1.3 -11.2,-12.4 -23.3,-24.7l-22.1,-22.2 156.4,-0c97.1,-0 160.1,0.4 166,1 32.3,3.4 63.7,21 83.2,46.7 20.9,27.5 29.1,63.5 22.2,97.1 -8.5,41.1 -39.1,76.1 -78.4,89.5 -19.4,6.6 -3.5,6.1 -206.5,6.7 -181.1,0.5 -184.1,0.5 -187.3,2.5 -6.9,4.2 -9.1,14.7 -4.3,21.3 4.8,6.7 -10.6,6.3 193.8,5.9l184.8,-0.3 10,-2.2c29,-6.7 53.1,-19.3 73.4,-38.7 18.7,-17.9 31.3,-37.8 39.2,-61.6 16.7,-50.9 5.9,-104.8 -29.3,-145.9 -24.7,-28.8 -61.4,-47.5 -100.3,-51 -5.5,-0.5 -80.6,-0.9 -167,-1l-156.9,-0 23.1,-23.3c24.8,-24.9 26,-26.6 24.3,-34.2 -2.1,-9.3 -13.7,-14.5 -21.5,-9.6z"
-      android:fillColor="@color/white"
-      android:strokeColor="#00000000"/>
+<vector android:height="24dp" android:viewportHeight="512"
+    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@color/white"
+        android:pathData="M76.5,72.9c-1.6,1 -19.3,18.2 -39.2,38.2 -31.5,31.7 -36.2,36.9 -36.8,40.1 -1.6,8.8 -2.1,8.2 36.2,46.9 19.6,19.8 37.1,36.9 39,38 6.9,4.3 16.6,1.9 20.7,-5 2.2,-3.7 2.4,-10.6 0.6,-14.2 -0.7,-1.3 -11.2,-12.4 -23.3,-24.7l-22.1,-22.2 156.4,-0c97.1,-0 160.1,0.4 166,1 32.3,3.4 63.7,21 83.2,46.7 20.9,27.5 29.1,63.5 22.2,97.1 -8.5,41.1 -39.1,76.1 -78.4,89.5 -19.4,6.6 -3.5,6.1 -206.5,6.7 -181.1,0.5 -184.1,0.5 -187.3,2.5 -6.9,4.2 -9.1,14.7 -4.3,21.3 4.8,6.7 -10.6,6.3 193.8,5.9l184.8,-0.3 10,-2.2c29,-6.7 53.1,-19.3 73.4,-38.7 18.7,-17.9 31.3,-37.8 39.2,-61.6 16.7,-50.9 5.9,-104.8 -29.3,-145.9 -24.7,-28.8 -61.4,-47.5 -100.3,-51 -5.5,-0.5 -80.6,-0.9 -167,-1l-156.9,-0 23.1,-23.3c24.8,-24.9 26,-26.6 24.3,-34.2 -2.1,-9.3 -13.7,-14.5 -21.5,-9.6z" android:strokeColor="#00000000"/>
 </vector>
